[project]
name = "pinhub-api"
version = "0.1.0"
description = "PinHub API."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.39",
    "fastapi>=0.115.13",
    "mangum>=0.19.0",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "ruff>=0.12.0",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.34.3",
]
