[project]
name = "pinhub-api"
version = "0.1.0"
description = "PinHub API."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "authlib>=1.6.0",
    "boto3>=1.38.39",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "mangum>=0.19.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "ruff>=0.12.0",
    "sqlmodel>=0.0.24",
    "starlette>=0.46.2",
    "uvicorn[standard]>=0.34.3",
]
